--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>Joshua Concepcion Portfolio</title>
+    <title>Joshua's Archive</title>
 </head>
 <body>
     
